docs: plan current-class JShell runner